--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "repository": "git@github.com:vineyard-bloom/vineyard-ethereum.git",
   "license": "MIT",
   "dependencies": {
-    "vineyard-ground": "0.2.14"
+    "vineyard-ground": "0.2.14",
+    "promise-each2": "^1.0.0",
+    "web3": "0.19.1"
   },
   "devDependencies": {
     "@types/es6-promise": "0.0.32",
