--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "web3": "0.19.1"
   },
   "devDependencies": {
+    "rimraf": "^2.6.1",
     "@types/es6-promise": "0.0.32",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.5",
