--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vineyard-ethereum",
-  "version": "0.8.2",
+  "version": "1.0.0-beta.0",
   "description": "Ethereum monitor",
   "main": "src/index.js",
   "types": "src/index.d.ts",
