--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bignumber.js": "^4.0.2",
     "promise-each2": "^1.0.0",
     "truffle-contract": "^3.0.0",
+    "vineyard-blockchain": "vineyard-bloom/vineyard-blockchain#1.0.0-beta",
     "web3": "0.19.1"
   },
   "devDependencies": {
