--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vineyard-ethereum",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.0-beta.1",
   "description": "Ethereum monitor",
   "main": "src/index.js",
   "types": "src/index.d.ts",
@@ -13,8 +13,7 @@
     "bignumber.js": "^4.0.2",
     "promise-each2": "^1.0.0",
     "truffle-contract": "^3.0.0",
-    "vineyard-blockchain": "vineyard-bloom/vineyard-blockchain#1.0.0-beta",
-    "web3": "0.19.1"
+    "vineyard-blockchain": "vineyard-bloom/vineyard-blockchain#1.0.0-beta"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
