Turned off strict TS compiling until the codebase is updated to support strict typing.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "strict": true,
+    "strict": false,
     "sourceMap": true,
     "declaration": true,
     "newLine": "lf",
