--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "repository": "git@github.com:vineyard-bloom/vineyard-ethereum.git",
   "license": "MIT",
   "dependencies": {
-    "bignumber.js": "^4.0.2",
+    "bignumber.js": "^4.1.0",
     "promise-each2": "^1.0.0",
     "truffle-contract": "^3.0.0",
     "vineyard-blockchain": "vineyard-bloom/vineyard-blockchain#1.0.0-beta",
@@ -18,11 +18,13 @@
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
-    "@types/node": "^7.0.5",
+    "@types/node": "^7.0.52",
     "ethereumjs-testrpc": "^4.1.3",
     "mocha": "^3.2.0",
     "rimraf": "^2.6.1",
     "source-map-support": "^0.4.14",
+    "tslint": "^5.9.1",
+    "tslint-config-standard": "^7.0.0",
     "typescript": "^2.1.6"
   }
 }
