--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "web3": "^0.19.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.52",
     "ethereumjs-testrpc": "^4.1.3",
