--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^7.0.52",
     "ethereumjs-testrpc": "^4.1.3",
     "mocha": "^3.2.0",
+    "chai": "^4.1.2",
     "rimraf": "^2.6.1",
     "source-map-support": "^0.4.14",
     "tslint": "^5.9.1",
