--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.52",
+    "chai": "^4.1.2",
     "ethereumjs-testrpc": "^4.1.3",
     "mocha": "^3.2.0",
-    "chai": "^4.1.2",
     "rimraf": "^2.6.1",
     "source-map-support": "^0.4.14",
     "tslint": "^5.9.1",
-    "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.1.6"
+    "tslint-config-standard": "^7.0.0"
   }
 }
