--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bignumber.js": "^4.1.0",
     "promise-each2": "^1.0.0",
+    "request": "^2.83.0",
     "truffle-contract": "^3.0.0",
     "vineyard-blockchain": "vineyard-bloom/vineyard-blockchain#1.0.0-beta",
     "web3": "^0.19.1"
@@ -26,6 +27,7 @@
     "rimraf": "^2.6.1",
     "source-map-support": "^0.4.14",
     "tslint": "^5.9.1",
-    "tslint-config-standard": "^7.0.0"
+    "tslint-config-standard": "^7.0.0",
+    "typescript": "^2.7.2"
   }
 }
