--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ethereumjs-testrpc": "^4.1.3",
     "mocha": "^3.2.0",
     "rimraf": "^2.6.1",
+    "solc": "^0.4.23",
     "source-map-support": "^0.4.14",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
