--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rimraf": "^2.6.1",
     "solc": "^0.4.23",
     "source-map-support": "^0.4.14",
+    "ts-node": "^6.0.2",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "typescript": "2.7.2"
